[gd_scene load_steps=19 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/Xolonium-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Sounds/confirmation.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/pause.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/pulse.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=4]
size = 10
outline_size = 2
outline_color = Color( 1, 1, 1, 0.784314 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 10
outline_size = 2
outline_color = Color( 1, 1, 1, 0.784314 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 10
outline_size = 2
outline_color = Color( 1, 1, 1, 0.784314 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 40
outline_size = 5
outline_color = Color( 1, 1, 1, 0.392157 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 8
outline_size = 2
outline_color = Color( 0.392157, 0.392157, 0.392157, 1 )
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=1]
action = "ui_up"
pressed = true

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 8
outline_size = 2
outline_color = Color( 0.392157, 0.392157, 0.392157, 1 )
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=7]
action = "ui_accept"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="DynamicFont" id=10]
size = 20
outline_size = 2
outline_color = Color( 1, 1, 1, 0.784314 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
outline_size = 2
font_data = ExtResource( 2 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TimerLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -73.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0, 0, 0, 0.784314 )
custom_fonts/font = SubResource( 4 )
text = "Time: 30"

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 4.0
margin_top = 18.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 0.784314 )
custom_fonts/font = SubResource( 5 )
text = "Score: 0"

[node name="ComboLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -79.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 0.784314 )
custom_fonts/font = SubResource( 13 )
text = "Combo: 00"
align = 2

[node name="CountDownLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 0.784314 )
custom_fonts/font = SubResource( 9 )
text = "3"
align = 1
valign = 1

[node name="PulseButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -23.0
margin_bottom = 1.0
rect_min_size = Vector2( 32, 24 )
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 2 )
text = "PULSE!"
flat = true

[node name="PausedScreen" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="PauseButton" type="Button" parent="."]
pause_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_right = 55.0
rect_min_size = Vector2( 32, 24 )
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
custom_fonts/font = SubResource( 6 )
shortcut = SubResource( 8 )
text = "PAUSE..."
flat = true

[node name="EndScreen" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="LastScoreLabel" type="Label" parent="EndScreen"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -65.0
margin_bottom = -12.0
custom_colors/font_color = Color( 0, 0, 0, 0.784314 )
custom_fonts/font = SubResource( 10 )
text = "Last Score
0"
align = 1
valign = 1

[node name="RestartButton" type="Button" parent="EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = 3.0
margin_right = 38.5
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0.560784, 0.709804, 1 )
custom_fonts/font = SubResource( 11 )
text = "Restart"
flat = true

[node name="QuitButton" type="Button" parent="EndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.5
margin_top = 35.0
margin_right = 38.5
margin_bottom = 61.0
custom_colors/font_color = Color( 0.760784, 0.443137, 0.823529, 1 )
custom_fonts/font = SubResource( 12 )
text = "Quit"
flat = true

[node name="PulseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PauseAudio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )

[node name="ConfirmationAudio" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )

[connection signal="pressed" from="PulseButton" to="." method="_on_PulseButton_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="EndScreen/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="EndScreen/QuitButton" to="." method="_on_QuitButton_pressed"]
